--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </a>
 
               <a
-                href="https://github.com/Pr0f3ssor"
+                href="https://github.com/ayoub-elbouzi"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -88,30 +88,7 @@
               </a>
             </div>
             <div class="home__img">
-              <svg
-                class="home__blob"
-                viewBox="0 0 200 187"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-              >
-                <mask id="mask0" mask-type="alpha">
-                  <path
-                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
-                      130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
-                      97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
-                      0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
-                  />
-                </mask>
-                <g mask="url(#mask0)">
-                  <path
-                    d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                      165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                      129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
-                  />
-                  <image src="assets\img\about.jpg" alt="" class="about__img" />
-                </g>
-              </svg>
+              <img src="assets\img\about.png" alt="" class="about__img" />
             </div>
             <div class="home__data">
               <h1 class="home__title">Hi, I'm Ayoub ELBOUZI</h1>
@@ -591,7 +568,7 @@
                   invalid users were logged, while valid users were not. YMMV.
                 </p>
                 <a
-                  href="https://github.com/Pr0f3ssor/ssh_enum"
+                  href="https://github.com/ayoub-elbouzi/ssh_enum"
                   class="button button--flex button--small portfolio__button"
                 >
                   GitHub Repository
@@ -637,7 +614,7 @@
 
                 </p>
                 <a
-                  href="https://github.com/Pr0f3ssor/wlcreator"
+                  href="https://github.com/ayoub-elbouzi/wlcreator"
                   class="button button--flex button--small portfolio__button"
                 >
                   GitHub Repository
